--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 html, body {
     height: 100%;
     width: 100%;
+    background-color: #003b6b;
+    color: #fff;
 }
 
 section {
@@ -13,9 +15,13 @@ section#app {
     flex-direction: column;
 }
 
+section#header-logo img {
+    border: 3px solid white;
+}
+
 section#header-title {
     text-align: center;
-    font-size: large;
+    font-size: x-large;
     font-weight: bold;
 }
 
@@ -30,10 +36,14 @@ section#footer-info {
 div#footer-info-address {
     display: inline-block;
     text-align: center;
+    font-size: small;
+    opacity: 0.5;
 }
 
 section#footer-social {
     padding-top: 5px;
+    opacity: 0.5;
+
 }
 
 .iconic-container {
@@ -43,4 +53,5 @@ section#footer-social {
 .facebook {
     width: 31px;
     height: 31px;
+    opacity: 0.5;
 }
