--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@ section#header {
     padding-top: 5px;
 }
 
+section#header-logo {
+    padding-top: 10px;
+}
+
 section#header-logo img {
     border: 3px solid #fff;
 }
@@ -33,6 +37,15 @@ section#header-title {
 
 section#header-bookmark-form {
     padding: .5rem 1rem;
+    padding-bottom: 0;
+}
+
+section#header-bookmark-menu > nav.navbar.navbar-expand-sm {
+    padding-bottom: 0;
+}
+
+section#header-bookmark-menu #navbarNavDropdown > ul > li > a {
+    padding-bottom: 0;
 }
 
 #header-bookmark-form-link:link,
@@ -43,6 +56,7 @@ section#header-bookmark-form {
     text-decoration: none;
     display: inline-block;
     padding: .5rem 1rem;
+    padding-bottom: 0;
 }
 
 section#form {
@@ -168,6 +182,7 @@ section#footer-social {
     section#header-bookmark-form {
         text-align: right;
         padding: .5rem 1rem;
+        padding-bottom: 0;
     }
 }
 
