--- a/styles.css
+++ b/styles.css
@@ -134,10 +134,6 @@ section#body-video {
      justify-content: center;*/
 }
 
-xxxsection#body-d3 * {
-    background-color: #ccc;
-}
-
 section#footer {
     border-top: 1px solid #B8C00E;
 }
@@ -177,7 +173,7 @@ section#footer-social {
 
 @media (max-width: 575px) {
     div#footer-info-address {
-        display: block;
+        display: none;
         position: static;
         right: 0px;
         float: unset;
@@ -188,6 +184,19 @@ section#footer-social {
         padding: .5rem 1rem;
         padding-bottom: 0;
     }
+
+    section#header-logo img {
+        height: 42px;
+    }
+
+    * {
+        font-size: small !important;
+    }
+
+    #body-svg * {
+        font-size: x-small !important;
+    }
+
 }
 
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700);
@@ -361,7 +370,7 @@ section#footer-social {
     position: absolute;
     right: 0;
     bottom: 0;
-    padding: 15px;
+
 }
 
 .h-value {
@@ -500,6 +509,3 @@ section#footer-social {
     shape-rendering: crispEdges;
 }
 
-xxx#body-d3 .axis text {
-    text-shadow: 0 1px 0 #fff;
-}
