--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,8 @@ section#footer-social {
 }
 .clients img{
     width: 50%;
-    margin-top:1em;
+    margin:1em;
+    
 }
 @media (max-width: 575px) {
     div#footer-info-address {
