--- a/styles.css
+++ b/styles.css
@@ -1,524 +1,219 @@
 html, body {
-    height: 100%;
-    width: 100%;
-    background-color: #003b6b;
-    color: #fff;
+  height: 100%;
+  width: 100%;
+  background-color: #003b6b;
+  color: #fff;
 }
 
 section {
-    /*border: 1px solid red;*/
+  /*border: 1px solid red;*/
 }
 
 section#app {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 section#header {
-    border-bottom: 1px solid #B8C00E;
-    padding-bottom: 5px;
-    padding-top: 5px;
+  border-bottom: 1px solid #B8C00E;
+  padding-bottom: 5px;
+  padding-top: 5px;
 }
 
 section#header-logo {
-    padding-top: 10px;
+  padding-top: 10px;
 }
 
 section#header-logo img {
-    border: 3px solid #fff;
+  border: 3px solid #fff;
 }
 
 section#header-title {
-    text-align: center;
-    font-size: x-large;
-    font-weight: bold;
+  text-align: center;
+  font-size: x-large;
+  font-weight: bold;
 }
 
 section#header-bookmark-form {
-    padding: .5rem 1rem;
-    padding-bottom: 0;
+  padding: .5rem 1rem;
+  padding-bottom: 0;
 }
 
 section#header-bookmark-menu > nav.navbar.navbar-expand-sm {
-    padding-bottom: 0;
+  padding-bottom: 0;
 }
 
 section#header-bookmark-menu #navbarNavDropdown > ul > li > a {
-    padding-bottom: 0;
+  padding-bottom: 0;
 }
 
 #header-bookmark-form-link:link,
 #header-bookmark-form-link:active,
 #header-bookmark-form-link:hover,
 #header-bookmark-form-link:visited {
-    color: #fff;
-    text-decoration: none;
-    display: inline-block;
-    padding: .5rem 1rem;
-    padding-bottom: 0;
+  color: #fff;
+  text-decoration: none;
+  display: inline-block;
+  padding: .5rem 1rem;
+  padding-bottom: 0;
 }
 
 section#form {
-    flex: 1;
-    overflow: auto;
+  flex: 1;
+  overflow: auto;
 }
 
 section#form.hidden {
-    display: none;
+  display: none;
 }
 
 section#savedforms {
-    flex: 1;
-    overflow: auto;
+  flex: 1;
+  overflow: auto;
 }
 
 section#savedforms.hidden {
-    display: none;
+  display: none;
 }
 
 section#form-fields {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 section#form select#FControlSelect2 {
-    height: 4.5em;
+  height: 4.5em;
 }
 
 section#form textarea#FControlTextarea1 {
-    height: 3.5em;
+  height: 3.5em;
 }
 
 section#form .form-group {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 section#form-buttons {
-    text-align: center;
-    padding-bottom: 10px;
+  text-align: center;
+  padding-bottom: 10px;
 }
 
 section#form-buttons button {
-    min-width: 90px;
-    margin-bottom: 3px;
+  min-width: 90px;
+  margin-bottom: 3px;
 }
 
 section#form-sent {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 section#form-sent.hidden {
-    display: none;
+  display: none;
 }
 
 section#form-fields.hidden {
-    display: none;
+  display: none;
 }
 
 section#form-sent > div {
-    height: 8.5em;
-    flex: unset;
-    margin-top: 1em;
+  height: 8.5em;
+  flex: unset;
+  margin-top: 1em;
 }
 
 section#body {
-    flex: 1;
-    overflow: auto;
+  flex: 1;
+  overflow: auto;
 }
 
 section#body.hidden {
-    display: none;
+  display: none;
 }
 
-section#body-video {
-    padding-top: 15px;
-    display: flex;
-    flex-direction: column;
-    /* align-items: center;
-     justify-content: center;*/
+section#body > section#map {
+  position: relative;
 }
 
 section#footer {
-    border-top: 1px solid #B8C00E;
+  border-top: 1px solid #B8C00E;
 }
 
 section#footer-info {
 }
 
 div#footer-info-address {
-    display: inline-block;
-    position: relative;
-    right: 40px;
-    float: right;
-    text-align: center;
-    font-size: small;
-    opacity: 0.5;
+  display: inline-block;
+  position: relative;
+  right: 40px;
+  float: right;
+  text-align: center;
+  font-size: small;
+  opacity: 0.5;
 }
 
 section#footer-social {
-    text-align: center;
-    padding-top: 5px;
-    opacity: 0.5;
+  text-align: center;
+  padding-top: 5px;
+  opacity: 0.5;
 }
 
 .iconic-container {
-    display: inline;
+  display: inline;
 }
 
 .sm-icon:visited {
-    color: white;
+  color: white;
 }
 
 .facebook {
-    width: 31px;
-    height: 31px;
-    opacity: 0.5;
+  width: 31px;
+  height: 31px;
+  opacity: 0.5;
 }
-.clients img{
-    width: 50%;
-    margin:1em;
-    
+
+.clients img {
+  width: 50%;
+  margin: 1em;
+
 }
+
 @media (max-width: 575px) {
-    div#footer-info-address {
-        display: none;
-        position: static;
-        right: 0px;
-        float: unset;
-    }
-
-    section#header-bookmark-form {
-        text-align: right;
-        padding: .5rem 1rem;
-        padding-bottom: 0;
-    }
-
-    section#header-logo img {
-        height: 42px;
-    }
-
-    * {
-        font-size: small !important;
-    }
-
-    #body-svg * {
-        font-size: x-small !important;
-    }
-
-}
-
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
-@font-face {
-    font-family: Lato;
-    src: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/176026/ProximaNova-Regular.otf);
-    font-weight: 300;
-}
-
-#grid {
-    -moz-transform: translate(1px, 0px);
-    -ms-transform: translate(1px, 0px);
-    -webkit-transform: translate(1px, 0px);
-    transform: translate(1px, 0px);
-}
-
-/* GRAPH - 1 */
-#graph-1 {
-    stroke: url(#gradient-1);
-    stroke-width: 1.5;
-    fill: transparent;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    -moz-animation: lineani 1.3s linear forwards;
-    -webkit-animation: lineani 1.3s linear forwards;
-    animation: lineani 1.3s linear forwards;
-}
-
-#poly-1 {
-    fill: url(#gradient-3);
-}
-
-#poly-2 {
-    fill: url(#gradient-4);
-}
-
-@-moz-keyframes lineani {
-    to {
-        stroke-dashoffset: 0;
-    }
-}
-
-@-webkit-keyframes lineani {
-    to {
-        stroke-dashoffset: 0;
-    }
-}
-
-@keyframes lineani {
-    to {
-        stroke-dashoffset: 0;
-    }
-}
-
-.underlay {
-    stroke-width: 5;
-    fill: transparent;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    stroke: #24303a;
-}
-
-#circle-graph-1 {
-    stroke: url(#gradient-1);
-    stroke-width: 5;
-    fill: transparent;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-}
-
-.chart-circle {
-    -moz-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    -webkit-transform: rotate(90deg);
-    transform: rotate(90deg);
-}
-
-.charts-container {
-    padding: 5px;
-    width: 100%;
-    max-width: 1024px;
-    display: inline-block;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-.chart {
-    color: #4a667a;
-    text-align: left;
-    position: relative;
-    height: auto;
-    background-color: #1e2730;
-    display: inline-block;
-    float: left;
-    position: relative;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 10px;
-    padding: 15px 20px 35px 20px;
-}
-
-.chart.circle {
-    padding: 15px 20px 40px 20px;
-}
-
-/*
-@media screen and (max-width: 700px) {
-  .chart {
-    width: calc(100% - 20px);
+  div#footer-info-address {
+    display: none;
+    position: static;
+    right: 0px;
+    float: unset;
   }
-}
-@media screen and (min-width: 700px) {
-  .chart {
-    width: calc(50% - 20px);
+
+  section#header-bookmark-form {
+    text-align: right;
+    padding: .5rem 1rem;
+    padding-bottom: 0;
   }
-}
-*/
-.chart {
-    width: 100%;
-}
 
-.title {
-    font-size: 22px;
-    margin-bottom: 12px;
-}
+  section#header-logo img {
+    height: 42px;
+  }
 
-.chart-circle {
-    display: inline-block;
-    position: relative;
-}
+  * {
+    font-size: small !important;
+  }
 
-.chart-svg {
-    position: relative;
-}
-
-.circle-percentage {
-    position: absolute;
-    color: white;
-    font-size: 30px;
-    left: 50%;
-    top: 50%;
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
 }
 
 @media screen and (max-width: 480px) {
-    .circle-percentage {
-        font-size: 32px;
-    }
+  .circle-percentage {
+    font-size: 32px;
+  }
 }
 
 .align-center {
-    text-align: center;
+  text-align: center;
 }
 
-.chart-line {
-    width: 80%;
-}
-
-.valueX {
-    font-size: 14px;
-}
-
-.chart-values {
-    text-align: right;
-    font-size: 14px;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-
-}
-
-.h-value {
-    -moz-transition: ease-in-out 700ms;
-    -o-transition: ease-in-out 700ms;
-    -webkit-transition: ease-in-out 700ms;
-    transition: ease-in-out 700ms;
-    opacity: 0;
-}
-
-.h-value.visible {
-    opacity: 1;
-}
-
-.percentage-value {
-    -moz-transition: ease-in-out 700ms;
-    -o-transition: ease-in-out 700ms;
-    -webkit-transition: ease-in-out 700ms;
-    transition: ease-in-out 700ms;
-    color: #48c15e;
-    margin-top: 2px;
-    opacity: 0;
-}
-
-.percentage-value.negative {
-    color: #ef6670;
-}
-
-.percentage-value.visible {
-    opacity: 1;
-}
-
-.total-gain {
-    color: white;
-    font-size: 30px;
-}
-
-.triangle {
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 28px 0 0 28px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-}
-
-.triangle.red {
-    border-color: transparent transparent transparent #ef6670;
-}
-
-.triangle.green {
-    border-color: transparent transparent transparent #48c15e;
-}
-
-.horizontal,
-.vertical {
-    stroke-width: 0.1;
-    stroke: #4a667a;
-}
-
-/* CLEARFIX HELPER */
-.cf:before,
-.cf:after {
-    content: " ";
-    /* 1 */
-    display: table;
-    /* 2 */
-}
-
-.cf:after {
-    clear: both;
-}
-
-/**
- * For IE 6/7 only
- * Include this rule to trigger hasLayout and contain floats.
- */
-.cf {
-    *zoom: 1;
-}
-
-.original {
-    color: #ef6670;
-    font-size: 14px;
-}
-
-.foreground path {
-    fill: none;
-    stroke: steelblue;
-    stroke-opacity: .7;
-}
-
-.brush .extent {
-    fill-opacity: .3;
-    stroke: #fff;
-    shape-rendering: crispEdges;
-}
-
-.axis line, .axis path {
-    fill: none;
-    stroke: #000;
-    shape-rendering: crispEdges;
-}
-
-.axis text {
-    fill: white;
-}
-
-#body-d3 svg {
-    font: 10px sans-serif;
-}
-
-#body-d3 .background path {
-    fill: none;
-    stroke: #ccc;
-    stroke-opacity: .4;
-    shape-rendering: crispEdges;
-}
-
-#body-d3 .foreground path {
-    fill: none;
-    stroke: steelblue;
-    stroke-opacity: .7;
-}
-
-#body-d3 .brush .extent {
-    fill-opacity: .3;
-    stroke: #fff;
-    shape-rendering: crispEdges;
-}
-
-#body-d3 .axis line, .axis path {
-    fill: none;
-    stroke: #fff;
-    shape-rendering: crispEdges;
-}
 
